[package]
name = "expenses_app"
version = "0.1.0"
edition = "2021"

[dependencies]

# Auth
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
# Https 
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
aide = { version = "0.13.4", features = ["scalar"] }
# Utils
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
# Db driver
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
